k8s-specifications/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template: 
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: votingappacr1234.azurecr.io/worker:v2
