k8s-specifications/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  selector:
    app: result
  ports:
    - name: "4000"
      port: 4000
      targetPort: 4000
