k8s-specifications/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  selector:
    app: vote
  ports:
    - port: 5000
      targetPort: 5000
